<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewIngredientDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Description:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextIngredientDesc"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="10"
            android:hint="Ingredient Description"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewIngredientDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Date:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:background="#FFFFFF"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewIngredientLocation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Location:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <RadioGroup
            android:id="@+id/radioGroupLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonPantry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pantry" />

            <RadioButton
                android:id="@+id/radioButtonFridge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Fridge" />

            <RadioButton
                android:id="@+id/radioButtonFreezer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Freezer" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewIngredientUnit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Unit:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextIngredientUnit"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="10"
            android:hint="Ingredient Unit"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewIngredientAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Amount:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextIngredientAmount"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="10"
            android:hint="Ingredient Amount"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewIngredientCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Category:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <RadioGroup
            android:id="@+id/radioGroupCategory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonDairy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dairy" />

            <RadioButton
                android:id="@+id/radioButtonFruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Fruit" />

            <RadioButton
                android:id="@+id/radioButtonGrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Grain" />

        </RadioGroup>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupCategory2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Protein" />

        <RadioButton
            android:id="@+id/radioButtonVegetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Vegetable" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Other" />

    </RadioGroup>

</LinearLayout>